@startuml

title __FARMSIMULATOR's Class Diagram__\n

  package  {
    package farmsimulator {
      interface Alive {
          {abstract} + liveHour()
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Barn {
          + Barn()
          + Barn()
          + getBulkTank()
          + installMilkingRobot()
          + takeCareOf()
          + takeCareOf()
          + toString()
      }
    }
  }
  

  package  {
    package farmsimulator {
      class BulkTank {
          - capacity : double
          - volume : double
          + BulkTank()
          + BulkTank()
          + addToTank()
          + getFromTank()
          + howMuchFreeSpace()
          + getVolume()
          + getCapacity()
          + toString()
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Cow {
          - name : String
          - udderCapacity : double
          - milkAmount : double
          {static} - NAMES : String[]
          + Cow()
          + Cow()
          + getCapacity()
          + liveHour()
          + milk()
          + getName()
          + getAmount()
          + toString()
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Farm {
          - owner : String
          - cowsInBarn : List<Cow>
          + Farm()
          + installMilkingRobot()
          + manageCows()
          + getOwner()
          + liveHour()
          + addCow()
          + cowListToString()
          + toString()
      }
    }
  }
  

  package  {
    package farmsimulator {
      class Main {
          + Main()
          {static} + main()
          {static} - printLine()
      }
    }
  }
  

  package  {
    package farmsimulator {
      interface Milkable {
          {abstract} + milk()
      }
    }
  }
  

  package  {
    package farmsimulator {
      class MilkingRobot {
          + MilkingRobot()
          + getBulkTank()
          + setBulkTank()
          + milk()
      }
    }
  }
  

  package  {
    package farmsimulator {
      class PasswordRandomizer {
          - random : Random
          - length : int
          + PasswordRandomizer()
          + createPassword()
      }
    }
  }
  

  Barn o-- BulkTank : tank
  Barn o-- MilkingRobot : milkingRobot
  Cow -up-|> Milkable
  Cow -up-|> Alive
  Cow -up-|> BulkTank
  Farm -up-|> Alive
  Farm -up-|> Barn
  Farm o-- Barn : barn
  MilkingRobot o-- BulkTank : connected


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
